# proto/gen/api/v1/memo_service.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.11
+// 	protoc-gen-go v1.36.12
 // 	protoc        (unknown)
 // source: api/v1/memo_service.proto
 
@@ -238,7 +238,7 @@ type Memo struct {
 	// One of PRIVATE (creator only), PROTECTED (signed-in users), or
 	// PUBLIC (anyone). Defaults to PRIVATE on creation when unspecified.
 	Visibility Visibility `protobuf:"varint,9,opt,name=visibility,proto3,enum=memos.api.v1.Visibility" json:"visibility,omitempty"`
-	// Output only. The tags extracted from the content.
+	// Optional. Explicit tags, independent of the body.
 	Tags []string `protobuf:"bytes,10,rep,name=tags,proto3" json:"tags,omitempty"`
 	// Whether the memo is pinned.
 	Pinned bool `protobuf:"varint,11,opt,name=pinned,proto3" json:"pinned,omitempty"`
@@ -256,7 +256,13 @@ type Memo struct {
 	// Output only. The snippet of the memo content. Plain text only.
 	Snippet string `protobuf:"bytes,17,opt,name=snippet,proto3" json:"snippet,omitempty"`
 	// Optional. The location of the memo.
-	Location      *Location `protobuf:"bytes,18,opt,name=location,proto3,oneof" json:"location,omitempty"`
+	Location *Location `protobuf:"bytes,18,opt,name=location,proto3,oneof" json:"location,omitempty"`
+	// Personal space; empty means the original personal space.
+	Space string `protobuf:"bytes,19,opt,name=space,proto3" json:"space,omitempty"`
+	// True for an independent todo card.
+	IsTodo bool `protobuf:"varint,20,opt,name=is_todo,json=isTodo,proto3" json:"is_todo,omitempty"`
+	// True when tags are managed separately from Markdown.
+	ExplicitTags  bool `protobuf:"varint,21,opt,name=explicit_tags,json=explicitTags,proto3" json:"explicit_tags,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -403,6 +409,27 @@ func (x *Memo) GetLocation() *Location {
 	return nil
 }
 
+func (x *Memo) GetSpace() string {
+	if x != nil {
+		return x.Space
+	}
+	return ""
+}
+
+func (x *Memo) GetIsTodo() bool {
+	if x != nil {
+		return x.IsTodo
+	}
+	return false
+}
+
+func (x *Memo) GetExplicitTags() bool {
+	if x != nil {
+		return x.ExplicitTags
+	}
+	return false
+}
+
 type Location struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
 	// A placeholder text for the location.
@@ -524,6 +551,8 @@ func (x *CreateMemoRequest) GetMemoId() string {
 
 type ListMemosRequest struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
+	// Select independent todo cards instead of notes.
+	IsTodo bool `protobuf:"varint,7,opt,name=is_todo,json=isTodo,proto3" json:"is_todo,omitempty"`
 	// Optional. The maximum number of memos to return.
 	// The service may return fewer than this value.
 	// If unspecified, at most 50 memos will be returned.
@@ -594,6 +623,13 @@ func (x *ListMemosRequest) ProtoReflect() protoreflect.Message {
 // Deprecated: Use ListMemosRequest.ProtoReflect.Descriptor instead.
 func (*ListMemosRequest) Descriptor() ([]byte, []int) {
 	return file_api_v1_memo_service_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *ListMemosRequest) GetIsTodo() bool {
+	if x != nil {
+		return x.IsTodo
+	}
+	return false
 }
 
 func (x *ListMemosRequest) GetPageSize() int32 {
@@ -2326,7 +2362,7 @@ const file_api_v1_memo_service_proto_rawDesc = "" +
 	"\rreaction_type\x18\x04 \x01(\tB\x03\xe0A\x02R\freactionType\x12@\n" +
 	"\vcreate_time\x18\x05 \x01(\v2\x1a.google.protobuf.TimestampB\x03\xe0A\x03R\n" +
 	"createTime:X\xeaAU\n" +
-	"\x15memos.api.v1/Reaction\x12!memos/{memo}/reactions/{reaction}\x1a\x04name*\treactions2\breaction\"\xbe\b\n" +
+	"\x15memos.api.v1/Reaction\x12!memos/{memo}/reactions/{reaction}\x1a\x04name*\treactions2\breaction\"\xa1\t\n" +
 	"\x04Memo\x12\x17\n" +
 	"\x04name\x18\x01 \x01(\tB\x03\xe0A\bR\x04name\x12.\n" +
 	"\x05state\x18\x02 \x01(\x0e2\x13.memos.api.v1.StateB\x03\xe0A\x02R\x05state\x123\n" +
@@ -2341,7 +2377,7 @@ const file_api_v1_memo_service_proto_rawDesc = "" +
 	"visibility\x18\t \x01(\x0e2\x18.memos.api.v1.VisibilityB\x03\xe0A\x02R\n" +
 	"visibility\x12\x17\n" +
 	"\x04tags\x18\n" +
-	" \x03(\tB\x03\xe0A\x03R\x04tags\x12\x1b\n" +
+	" \x03(\tB\x03\xe0A\x01R\x04tags\x12\x1b\n" +
 	"\x06pinned\x18\v \x01(\bB\x03\xe0A\x01R\x06pinned\x12?\n" +
 	"\vattachments\x18\f \x03(\v2\x18.memos.api.v1.AttachmentB\x03\xe0A\x01R\vattachments\x12=\n" +
 	"\trelations\x18\r \x03(\v2\x1a.memos.api.v1.MemoRelationB\x03\xe0A\x01R\trelations\x129\n" +
@@ -2350,7 +2386,10 @@ const file_api_v1_memo_service_proto_rawDesc = "" +
 	"\x06parent\x18\x10 \x01(\tB\x19\xe0A\x03\xfaA\x13\n" +
 	"\x11memos.api.v1/MemoH\x00R\x06parent\x88\x01\x01\x12\x1d\n" +
 	"\asnippet\x18\x11 \x01(\tB\x03\xe0A\x03R\asnippet\x12<\n" +
-	"\blocation\x18\x12 \x01(\v2\x16.memos.api.v1.LocationB\x03\xe0A\x01H\x01R\blocation\x88\x01\x01\x1a\xac\x01\n" +
+	"\blocation\x18\x12 \x01(\v2\x16.memos.api.v1.LocationB\x03\xe0A\x01H\x01R\blocation\x88\x01\x01\x12\x19\n" +
+	"\x05space\x18\x13 \x01(\tB\x03\xe0A\x01R\x05space\x12\x1c\n" +
+	"\ais_todo\x18\x14 \x01(\bB\x03\xe0A\x01R\x06isTodo\x12(\n" +
+	"\rexplicit_tags\x18\x15 \x01(\bB\x03\xe0A\x01R\fexplicitTags\x1a\xac\x01\n" +
 	"\bProperty\x12\x19\n" +
 	"\bhas_link\x18\x01 \x01(\bR\ahasLink\x12\"\n" +
 	"\rhas_task_list\x18\x02 \x01(\bR\vhasTaskList\x12\x19\n" +
@@ -2366,8 +2405,9 @@ const file_api_v1_memo_service_proto_rawDesc = "" +
 	"\tlongitude\x18\x03 \x01(\x01B\x03\xe0A\x01R\tlongitude\"^\n" +
 	"\x11CreateMemoRequest\x12+\n" +
 	"\x04memo\x18\x01 \x01(\v2\x12.memos.api.v1.MemoB\x03\xe0A\x02R\x04memo\x12\x1c\n" +
-	"\amemo_id\x18\x02 \x01(\tB\x03\xe0A\x01R\x06memoId\"\xed\x01\n" +
-	"\x10ListMemosRequest\x12 \n" +
+	"\amemo_id\x18\x02 \x01(\tB\x03\xe0A\x01R\x06memoId\"\x8b\x02\n" +
+	"\x10ListMemosRequest\x12\x1c\n" +
+	"\ais_todo\x18\a \x01(\bB\x03\xe0A\x01R\x06isTodo\x12 \n" +
 	"\tpage_size\x18\x01 \x01(\x05B\x03\xe0A\x01R\bpageSize\x12\"\n" +
 	"\n" +
 	"page_token\x18\x02 \x01(\tB\x03\xe0A\x01R\tpageToken\x12.\n" +
